refactor uniflow to support batch inference

--- a/example/model/few_shot_model.ipynb
+++ b/example/model/few_shot_model.ipynb
@@ -127,10 +127,53 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['instruction: Generate one question and its corresponding answer based on the context.\\n    Following the format of the examples below. The response must include original context, question, and answer.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: It was a sunny day and the sky color is blue.']\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:02<00:00,  1.26s/it]\n"
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 1/2 [00:00<00:00,  1.86it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['question: What is the color of the sky?\\nanswer: blue.']\n",
+      "['instruction: Generate one question and its corresponding answer based on the context.\\n    Following the format of the examples below. The response must include original context, question, and answer.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: My name is bobby and I am a talent software engineer working on AI/ML.']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:01<00:00,  1.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['question: What type of programming do you work on?\\nanswer: AI/ML deployment.']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -147,7 +190,7 @@
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'what color is the sky on a sunny day?',\n",
+       "   'question': 'what is the color of the sky?',\n",
        "   'answer': 'blue.'}],\n",
        " 'error': 'Failed to deserialize 0 examples'}"
       ]
@@ -217,7 +260,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x105e39540>"
+       "<graphviz.graphs.Digraph at 0x10589e980>"
       ]
      },
      "metadata": {},
@@ -277,7 +320,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x105e3a020>"
+       "<graphviz.graphs.Digraph at 0x105829870>"
       ]
      },
      "metadata": {},
