--- a/example/model/huggingface_model.ipynb
+++ b/example/model/huggingface_model.ipynb
@@ -63,6 +63,7 @@
     "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.model.server import ModelServerFactory\n",
     "from uniflow.config import HuggingfaceConfig\n",
+    "from uniflow.model.config import HuggingfaceModelConfig\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "load_dotenv()"
@@ -168,25 +169,39 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:09<00:00,  4.73s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "config = HuggingfaceConfig()\n",
+    "config = HuggingfaceConfig(model_config=HuggingfaceModelConfig(batch_size=1))\n",
     "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [01:57<00:00, 58.91s/it]\n",
-      "  0%|          | 0/2 [00:00<?, ?it/s]/opt/conda/envs/uniflow/lib/python3.10/site-packages/bitsandbytes/nn/modules.py:226: UserWarning: Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.\n",
+      "  0%|          | 0/2 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/bitsandbytes/nn/modules.py:226: UserWarning: Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.\n",
       "  warnings.warn(f'Input type into Linear4bit is torch.float16, but bnb_4bit_compute_type=torch.float32 (default). This will lead to slow inference or training speed.')\n",
-      "100%|██████████| 2/2 [00:04<00:00,  2.04s/it]\n"
+      "100%|██████████| 2/2 [00:03<00:00,  1.53s/it]\n"
      ]
     }
    ],
@@ -196,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,13 +219,13 @@
       "text/plain": [
        "[{'output': [{'response': [\"instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: It was a sunny day and the sky color is blue.\\nquestion: Is it raining outside?\\nanswer: No, it's not raining because the sky is blue.\"],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7fda41dc5750>},\n",
+       "  'root': <uniflow.node.node.Node at 0x7fd739f8d540>},\n",
        " {'output': [{'response': ['instruction: Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\\ncontext: The quick brown fox jumps over the lazy dog.\\nquestion: What is the color of the fox?\\nanswer: brown.\\ncontext: The quick brown fox jumps over the lazy black dog.\\nquestion: What is the color of the dog?\\nanswer: black.\\ncontext: My name is bobby and I am a talent software engineer working on AI/ML.\\nquestion: What is your profession?\\nanswer: software engineer'],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x7fdb150bfb80>}]"
+       "  'root': <uniflow.node.node.Node at 0x7fd81473bc70>}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +327,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fd9e60f4520>"
+       "<graphviz.graphs.Digraph at 0x7fd815836410>"
       ]
      },
      "metadata": {},
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +388,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7fd9e5e68040>"
+       "<graphviz.graphs.Digraph at 0x7fd81717b010>"
       ]
      },
      "metadata": {},
