--- a/example/model/lmqg_model.ipynb
+++ b/example/model/lmqg_model.ipynb
@@ -55,6 +55,7 @@
     "from uniflow.client import Client\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
     "from uniflow.config import LMQGConfig\n",
+    "from uniflow.model.config import LMQGModelConfig\n",
     "from uniflow.viz import Viz\n",
     "\n",
     "import en_core_web_sm\n",
@@ -108,17 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = LMQGConfig()\n",
-    "client = Client(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,12 +123,36 @@
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/modeling_utils.py:2570: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
       "  warnings.warn(\n",
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/utils/hub.py:374: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n",
-      "100%|██████████| 4/4 [00:00<00:00, 723.31it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 1652.28it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 1825.20it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 1640.32it/s]\n",
-      "100%|██████████| 2/2 [00:02<00:00,  1.14s/it]\n"
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = LMQGConfig(model_config=LMQGModelConfig(batch_size=1))\n",
+    "client = Client(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00, 1223.10it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 4/4 [00:00<00:00, 1838.60it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 2089.84it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 2918.79it/s]\n",
+      "100%|██████████| 2/2 [00:02<00:00,  1.04s/it]\n"
      ]
     }
    ],
@@ -147,20 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Who was an English painter who specialised in watercolour landscapes?',\n",
-       "  'William Turner'),\n",
-       " ('What is William Turner often known as?', 'William Turner of Oxford'),\n",
-       " (\"What did many of William Turner's paintings depict?\", 'countryside'),\n",
-       " ('From where did William Turner view the city of Oxford?', 'Hinksey Hill.')]"
+       "[[('Who was an English painter who specialised in watercolour landscapes?',\n",
+       "   'William Turner'),\n",
+       "  ('What is William Turner often known as?', 'William Turner of Oxford'),\n",
+       "  (\"What did many of William Turner's paintings depict?\", 'countryside'),\n",
+       "  ('From where did William Turner view the city of Oxford?', 'Hinksey Hill.')]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +241,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f6c20642ec0>"
+       "<graphviz.graphs.Digraph at 0x7f51f08d4820>"
       ]
      },
      "metadata": {},
@@ -239,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +302,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f6b213d08e0>"
+       "<graphviz.graphs.Digraph at 0x7f52ce001b10>"
       ]
      },
      "metadata": {},
