--- a/example/model/openai_json_model.ipynb
+++ b/example/model/openai_json_model.ipynb
@@ -77,11 +77,11 @@
      "data": {
       "text/plain": [
        "['LinearFlow',\n",
+       " 'FewShotModelFlow',\n",
        " 'ModelFlow',\n",
        " 'OpenAIJsonModelFlow',\n",
        " 'HuggingFaceModelFlow',\n",
-       " 'LMQGModelFlow',\n",
-       " 'FewShotModelFlow']"
+       " 'LMQGModelFlow']"
       ]
      },
      "execution_count": 3,
@@ -167,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:05<00:00,  2.85s/it]\n"
+      "100%|██████████| 2/2 [00:04<00:00,  2.09s/it]\n"
      ]
     }
    ],
@@ -184,8 +184,8 @@
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What color was the sky on the sunny day?',\n",
-       "   'answer': 'The sky color was blue on the sunny day.'}],\n",
+       "   'question': 'What was the weather like and what color was the sky?',\n",
+       "   'answer': 'The weather was sunny and the sky was blue.'}],\n",
        " 'error': 'Failed to deserialize 0 examples'}"
       ]
      },
@@ -254,7 +254,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1057b3e50>"
+       "<graphviz.graphs.Digraph at 0x105a43d60>"
       ]
      },
      "metadata": {},
@@ -314,7 +314,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1058eabc0>"
+       "<graphviz.graphs.Digraph at 0x105a417b0>"
       ]
      },
      "metadata": {},
