--- a/example/model/self_instruct_pdf_source.ipynb
+++ b/example/model/self_instruct_pdf_source.ipynb
@@ -5,10 +5,29 @@
    "id": "7cbc4c4a",
    "metadata": {},
    "source": [
-    "# Example of generating QAs for an ML book (using self-instruct)\n",
-    "Source: https://d2l.ai/chapter_appendix-mathematics-for-deep-learning/information-theory.html\n",
+    "# Example of generating QAs for a Paul Graham Essay\n",
+    "**Source:** http://www.paulgraham.com/makersschedule.html\n",
     "\n",
-    "### Load packages"
+    "**Description:** A famous essay by Paul Graham about the difference between the schedules of managers and makers.\n",
+    "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to have the following packages installed:\n",
+    "```\n",
+    "pip install langchain pandas pypdf\n",
+    "```\n",
+    "\n",
+    "Also, make sure you have a .env file with your OpenAI API key in the root directory of this project.\n",
+    "```\n",
+    "OPENAI_API_KEY=YOUR_API_KEY\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Packages"
    ]
   },
   {
@@ -37,18 +56,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
     "from uniflow.client import Client\n",
     "from uniflow.config import Config\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
-    "from langchain.document_loaders import PyPDFLoader\n"
+    "from langchain.document_loaders import PyPDFLoader\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -56,9 +88,7 @@
    "id": "cb677037",
    "metadata": {},
    "source": [
-    "### Prepare the input data\n",
-    "\n",
-    "Uncomment any of the pdf files below as the sample file to build the self-instruct flow."
+    "### Prepare the input data"
    ]
   },
   {
@@ -168,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:13<00:00, 13.16s/it]\n"
+      "100%|██████████| 1/1 [00:07<00:00,  7.31s/it]\n"
      ]
     }
    ],
@@ -184,11 +214,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [{'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole day.\"\\n– Charles Dickens\\nJuly 2009\\nOne reason programmers dislike meetings so much is that they\\'re\\non a different type of schedule from other people. Meetings cost\\nthem more.\\nThere are two types of schedule, which I\\'ll call the manager\\'s\\nschedule and the maker\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the traditional appointment book, with\\neach day cut into one hour intervals. You can block off several\\nhours for a single task if you need to, but by default you change\\nwhat you\\'re doing every hour.\\nWhen you use time that way, it\\'s merely a practical problem to\\nmeet with someone. Find an open slot in your schedule, book\\nthem, and you\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another way of using time\\nthat\\'s common among people who make things, like programmers\\nand writers. They generally prefer to use time in units of half a\\nday at least. You can\\'t write or program well in units of an hour.\\nThat\\'s barely enough time to get started.\\nWhen you\\'re operating on the maker\\'s schedule, meetings are a\\ndisaster. A single meeting can blow a whole afternoon, by\\nbreaking it into two pieces each too small to do anything hard in.\\nPlus you have to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s always\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the maker\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the maker\\'s schedule, having a meeting is like\\nthrowing an exception. It doesn\\'t merely cause you to switch\\nfrom one task to another; it changes the mode in which you\\nwork.\\nI find one meeting can sometimes affect a whole day. A meeting\\ncommonly blows at least half a day, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be broken up, I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound oversensitive, but if you\\'re a maker, think of your own\\ncase. Don\\'t your spirits rise at the thought of having an entire day\\nfree to work, with no appointments at all? Well, that means your\\nspirits are correspondingly depressed when you don\\'t. And\\nambitious projects are by definition close to the limits of your',\n",
-       "      'question': 'According to the article, what are the two types of schedules discussed?',\n",
-       "      'answer': \"The manager's schedule and the maker's schedule.\"}],\n",
+       "[{'output': [{'response': [{'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\n– Charles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they\\'re\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I\\'ll call the manager\\'s\\nschedule and the mak er\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou\\'re doing ev ery hour .\\nWhen y ou use time that w ay, it\\'s merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another w ay of using time\\nthat\\'s common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can\\'t write or progr am well in units of an hour .\\nThat\\'s barely enough time to get started.\\nWhen y ou\\'re oper ating on the mak er\\'s schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do anything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er\\'s schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn\\'t merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou\\'re a mak er, think of y our own\\ncase. Don\\'t y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don\\'t. And\\nambitious projects are b y definition close to the limits of y our',\n",
+       "      'question': 'What type of schedule is preferred by programmers and writers according to the context?',\n",
+       "      'answer': 'They generally prefer to use time in units of half a day at least.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x151ca44c0>}]"
+       "  'root': <uniflow.node.node.Node at 0x1405e7460>}]"
       ]
      },
      "execution_count": 10,
@@ -202,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,8 +265,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's ...</td>\n",
-       "      <td>According to the article, what are the two typ...</td>\n",
-       "      <td>The manager's schedule and the maker's schedule.</td>\n",
+       "      <td>What type of schedule is preferred by programm...</td>\n",
+       "      <td>They generally prefer to use time in units of ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -247,13 +277,13 @@
        "0  11/6/23, 11:40 AM Maker's Schedule, Manager's ...   \n",
        "\n",
        "                                            question  \\\n",
-       "0  According to the article, what are the two typ...   \n",
+       "0  What type of schedule is preferred by programm...   \n",
        "\n",
-       "                                             answer  \n",
-       "0  The manager's schedule and the maker's schedule.  "
+       "                                              answer  \n",
+       "0  They generally prefer to use time in units of ...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
