add load_env and instructions for installs and env file

--- a/example/model/self_instruct_html_source.ipynb
+++ b/example/model/self_instruct_html_source.ipynb
@@ -8,6 +8,23 @@
     "# Example of generating QAs for an ML book (using self-instruct)\n",
     "Source: https://d2l.ai/chapter_appendix-mathematics-for-deep-learning/information-theory.html\n",
     "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to have the following packages installed:\n",
+    "```\n",
+    "pip install langchain pandas unstructured\n",
+    "```\n",
+    "\n",
+    "Also, make sure you have a .env file with your OpenAI API key in the root directory of this project.\n",
+    "```\n",
+    "OPENAI_API_KEY=YOUR_API_KEY\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load packages"
    ]
   },
@@ -37,18 +54,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
     "from uniflow.client import Client\n",
     "from uniflow.config import Config\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
-    "from langchain.document_loaders import UnstructuredHTMLLoader\n"
+    "from langchain.document_loaders import UnstructuredHTMLLoader\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -112,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +194,7 @@
        "    'answer': ''}]}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:10<00:00,  3.39s/it]\n"
+      "100%|██████████| 3/3 [00:05<00:00,  1.81s/it]\n"
      ]
     }
    ],
@@ -210,30 +240,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
-       "      'question': 'How much information do these events have?',\n",
-       "      'answer': 'They have 0 bits, 2 bits, 5.7 bits, and  225.6 bits of information respectively.'}],\n",
+       "      'question': 'What is the amount of information represented by the events with 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits?',\n",
+       "      'answer': 'The events represent 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x297bd18a0>},\n",
-       " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As a starting point, rather than caring about the knowledge, we may build off the idea that information represents the degree of surprise or the abstract possibility of the event. For example, if we want to describe an unusual event, we need a lot information. For a common event, we may not need much information.',\n",
-       "      'question': 'What does information represent in relation to the degree of surprise or the abstract possibility of an event?',\n",
-       "      'answer': 'Information represents the degree of surprise or the abstract possibility of an event.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x16838eef0>},\n",
+       " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
+       "      'question': 'According to the context, what does information represent?',\n",
+       "      'answer': 'The degree of surprise or the abstract possibility of the event.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x297bd1690>},\n",
-       " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'What concept did Shannon introduce for the first time in his 1948 article?',\n",
-       "      'answer': 'Shannon introduced the concept of information entropy for the first time.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x16838ece0>},\n",
+       " {'output': [{'response': [{'context': \"In Pablo Picasso's Les Demoiselles d'Avignon, he introduced the art world to a new type of cubism that marked a significant shift in artistic style.\",\n",
+       "      'question': \"What type of cubism did Pablo Picasso introduce in Les Demoiselles d'Avignon?\",\n",
+       "      'answer': 'A new type of cubism.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x297bd19f0>}]"
+       "  'root': <uniflow.node.node.Node at 0x16838f0a0>}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,20 +314,20 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Any notion of information we develop must conf...</td>\n",
-       "      <td>How much information do these events have?</td>\n",
-       "      <td>They have 0 bits, 2 bits, 5.7 bits, and  225.6...</td>\n",
+       "      <td>What is the amount of information represented ...</td>\n",
+       "      <td>The events represent 0 bits, 2 bits, ~5.7 bits...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>If we read through these thought experiments, ...</td>\n",
-       "      <td>What does information represent in relation to...</td>\n",
-       "      <td>Information represents the degree of surprise ...</td>\n",
+       "      <td>According to the context, what does informatio...</td>\n",
+       "      <td>The degree of surprise or the abstract possibi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>In 1948, Claude E. Shannon published A Mathema...</td>\n",
-       "      <td>What concept did Shannon introduce for the fir...</td>\n",
-       "      <td>Shannon introduced the concept of information ...</td>\n",
+       "      <td>In Pablo Picasso's Les Demoiselles d'Avignon, ...</td>\n",
+       "      <td>What type of cubism did Pablo Picasso introduc...</td>\n",
+       "      <td>A new type of cubism.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -307,20 +337,20 @@
        "                                             context  \\\n",
        "0  Any notion of information we develop must conf...   \n",
        "1  If we read through these thought experiments, ...   \n",
-       "2  In 1948, Claude E. Shannon published A Mathema...   \n",
+       "2  In Pablo Picasso's Les Demoiselles d'Avignon, ...   \n",
        "\n",
        "                                            question  \\\n",
-       "0         How much information do these events have?   \n",
-       "1  What does information represent in relation to...   \n",
-       "2  What concept did Shannon introduce for the fir...   \n",
+       "0  What is the amount of information represented ...   \n",
+       "1  According to the context, what does informatio...   \n",
+       "2  What type of cubism did Pablo Picasso introduc...   \n",
        "\n",
        "                                              answer  \n",
-       "0  They have 0 bits, 2 bits, 5.7 bits, and  225.6...  \n",
-       "1  Information represents the degree of surprise ...  \n",
-       "2  Shannon introduced the concept of information ...  "
+       "0  The events represent 0 bits, 2 bits, ~5.7 bits...  \n",
+       "1  The degree of surprise or the abstract possibi...  \n",
+       "2                              A new type of cubism.  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
