--- a/example/model/self_instruct_few_shot_html_source.ipynb
+++ b/example/model/self_instruct_few_shot_html_source.ipynb
@@ -8,6 +8,23 @@
     "# Example of generating QAs for an ML book (using self-instruct)\n",
     "Source: https://d2l.ai/chapter_appendix-mathematics-for-deep-learning/information-theory.html\n",
     "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to have the following packages installed:\n",
+    "```\n",
+    "pip install langchain pandas unstructured\n",
+    "```\n",
+    "\n",
+    "Also, make sure you have a .env file with your OpenAI API key in the root directory of this project.\n",
+    "```\n",
+    "OPENAI_API_KEY=YOUR_API_KEY\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load packages"
    ]
   },
@@ -37,9 +54,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -47,7 +74,10 @@
     "import pandas as pd\n",
     "from uniflow.client import Client\n",
     "from uniflow.config import OpenAIFewShotConfig\n",
-    "from langchain.document_loaders import UnstructuredHTMLLoader\n"
+    "from langchain.document_loaders import UnstructuredHTMLLoader\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -167,7 +197,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:05<00:00,  1.82s/it]\n"
+      "100%|██████████| 3/3 [00:03<00:00,  1.11s/it]\n"
      ]
     }
    ],
@@ -177,30 +207,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'Any notion of information we develop must conform to this intuition.\\nIndeed, in the next sections we will learn how to compute that these\\nevents have \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\),\\n\\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of\\ninformation respectively.',\n",
-       "      'question': 'how many bits of information do the events described have?',\n",
-       "      'answer': 'the events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.'}],\n",
+       "      'question': 'how many bits of information do the mentioned events have?',\n",
+       "      'answer': '\\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information respectively.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2a86f0f40>},\n",
+       "  'root': <uniflow.node.node.Node at 0x15f082e00>},\n",
        " {'output': [{'response': [{'context': 'If we read through these thought experiments, we see a natural idea. As\\na starting point, rather than caring about the knowledge, we may build\\noff the idea that information represents the degree of surprise or the\\nabstract possibility of the event. For example, if we want to describe\\nan unusual event, we need a lot information. For a common event, we may\\nnot need much information.',\n",
-       "      'question': 'what is information used to represent in thought experiments?',\n",
+       "      'question': 'of describing unusual and common events?',\n",
        "      'answer': 'the degree of surprise or the abstract possibility of the event.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2a871b9a0>},\n",
+       "  'root': <uniflow.node.node.Node at 0x15f0a0040>},\n",
        " {'output': [{'response': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "      'question': 'who published a mathematical theory of communication in 1948?',\n",
+       "      'question': 'who published the article \"a mathematical theory of communication\" in 1948?',\n",
        "      'answer': 'claude e. shannon.'}],\n",
        "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2a86f1060>}]"
+       "  'root': <uniflow.node.node.Node at 0x15f082f50>}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -251,19 +281,19 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Any notion of information we develop must conf...</td>\n",
-       "      <td>how many bits of information do the events des...</td>\n",
-       "      <td>the events have 0 bits, 2 bits, ~5.7 bits, and...</td>\n",
+       "      <td>how many bits of information do the mentioned ...</td>\n",
+       "      <td>\\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>If we read through these thought experiments, ...</td>\n",
-       "      <td>what is information used to represent in thoug...</td>\n",
+       "      <td>of describing unusual and common events?</td>\n",
        "      <td>the degree of surprise or the abstract possibi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>In 1948, Claude E. Shannon published A Mathema...</td>\n",
-       "      <td>who published a mathematical theory of communi...</td>\n",
+       "      <td>who published the article \"a mathematical theo...</td>\n",
        "      <td>claude e. shannon.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -277,17 +307,17 @@
        "2  In 1948, Claude E. Shannon published A Mathema...   \n",
        "\n",
        "                                            question  \\\n",
-       "0  how many bits of information do the events des...   \n",
-       "1  what is information used to represent in thoug...   \n",
-       "2  who published a mathematical theory of communi...   \n",
+       "0  how many bits of information do the mentioned ...   \n",
+       "1           of describing unusual and common events?   \n",
+       "2  who published the article \"a mathematical theo...   \n",
        "\n",
        "                                              answer  \n",
-       "0  the events have 0 bits, 2 bits, ~5.7 bits, and...  \n",
+       "0  \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5...  \n",
        "1  the degree of surprise or the abstract possibi...  \n",
        "2                                 claude e. shannon.  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
